footer contact removed

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <p>📍 Made in India, For India, By India.</p>
                 <p>🌐 Connect. Share. Celebrate.</p>
                 <div class="footer-buttons">
-                    <button class="btn-primary">Contact Us</button>
+                    <!--<button class="btn-primary">Contact Us</button>-->
                     <button class="btn-outline">Download Now</button>
                 </div>
             </div>
