--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inSTA - Indian Social Trusted Application</title>
     <meta name="description" content="A Social Platform Built for India, By India, With Trust. Connect, Share, Celebrate Culture with inSTA - India's own social media app.">
-    
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <a href="#home">
-                <img src="https://motobeans.com/inSTA-logo.png" alt="inSTA Logo">
+                <a href="/">
+                    <img src="https://motobeans.com/inSTA-logo.png" alt="inSTA Logo">
                 </a>
             </div>
             <ul class="nav-menu">
@@ -35,7 +35,7 @@
                 <p>📲 Connect. Share. Celebrate Culture. Join the Future with inSTA.</p>
                 <div class="hero-buttons">
                     <button class="btn-primary">🚀 Download Now</button>
-                    <button class="btn-outline">📖 Learn More</button>
+                    <!--<button class="btn-outline">📖 Learn More</button>-->
                 </div>
             </div>
             <div class="hero-image">
@@ -126,11 +126,11 @@
                     <h3>Groups & Communities</h3>
                     <p>Create interest-based groups, join discussions, and build networks.</p>
                 </div>
-                <div class="feature-item">
+                <!--<div class="feature-item">
                     <div class="feature-icon">💬</div>
                     <h3>Messaging & Chat</h3>
                     <p>Fast, secure, and private conversations.</p>
-                </div>
+                </div>-->
                 <div class="feature-item">
                     <div class="feature-icon">🎯</div>
                     <h3>AI-Powered Suggestions</h3>
@@ -150,7 +150,7 @@
         <div class="container">
             <h2 class="section-title">🌍 Why inSTA?</h2>
             <p style="text-align: center; font-size: 1.2rem; margin-bottom: 3rem; color: #666;">Did you know?</p>
-            
+
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="icon">🌐</div>
@@ -209,7 +209,7 @@
                     <div class="contact-card">
                         <div class="contact-icon">📧</div>
                         <h3>Email</h3>
-                        <p>hello@insta.com</p>
+                        <p>social@m-insta.com</p>
                         <p>Get in touch with our team</p>
                     </div>
                     <div class="contact-card">
