--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="/">
-                    <img src="https://motobeans.com/inSTA-logo.png" alt="inSTA Logo">
+                    <img src="logo.png" alt="inSTA Logo">
                 </a>
             </div>
             <ul class="nav-menu">
@@ -31,7 +31,7 @@
             <!--<p class="last-updated">Last updated: August 19, 2025</p>-->
 
             <div class="terms-text">
-                <p class="welcome-text">Welcome to inSTA ("we," "our," or "us"). At inSTA – Indian Social Trusted Application, your privacy and data security are paramount. This Privacy Policy explains how we collect, use, disclose, and safeguard your personal information when you use our app or website (m-insta.com).</p>
+                <p class="welcome-text">Welcome to inSTA ("we," "our," or "us"). At inSTA – Indian Social Trusted Application, your privacy and data security are paramount. This Privacy Policy explains how we collect, use, disclose, and safeguard your personal information when you use our app or website (m-inSTA.com).</p>
 
                 <div class="terms-section">
                     <h2>1. Information We Collect</h2>
