--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="/">
-                    <img src="https://motobeans.com/inSTA-logo.png" alt="inSTA Logo">
+                    <img src="logo.png" alt="inSTA Logo">
                 </a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#why-insta">Why inSTA</a></li>
+                <li><a href="#why-inSTA">Why inSTA</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="download-btn">Download App</button>
@@ -146,7 +146,7 @@
     </section>
 
     <!-- Why inSTA Section -->
-    <section id="why-insta" class="section why-insta">
+    <section id="why-inSTA" class="section why-insta">
         <div class="container">
             <h2 class="section-title">🌍 Why inSTA?</h2>
             <p style="text-align: center; font-size: 1.2rem; margin-bottom: 3rem; color: #666;">Did you know?</p>
