--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="/">
-                    <img src="https://motobeans.com/inSTA-logo.png" alt="inSTA Logo">
+                    <img src="logo.png" alt="inSTA Logo">
                 </a>
             </div>
             <ul class="nav-menu">
@@ -132,7 +132,7 @@
                     <h2>13. Contact Information</h2>
                     <p>For questions about these Terms & Conditions:</p>
                     <div class="contact-info">
-                        <p><strong>Email:</strong> legal@m-insta.com</p>
+                        <p><strong>Email:</strong> help@m-insta.com</p>
                         <p><strong>Website:</strong> m-insta.com</p>
                     </div>
                 </div>
